// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color Parser HSLA clamps alpha values between either 0 and 1 or 0% and 100% 1`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 0,
        "stringify": [Function],
      },
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 100%, 0%, -.1%)",
}
`;

exports[`Color Parser HSLA clamps alpha values between either 0 and 1 or 0% and 100% 2`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 100%, 0%, 100.1%)",
}
`;

exports[`Color Parser HSLA clamps alpha values between either 0 and 1 or 0% and 100% 3`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 0,
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 100%, 0%, -.1)",
}
`;

exports[`Color Parser HSLA clamps alpha values between either 0 and 1 or 0% and 100% 4`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 100%, 0%, 1.01)",
}
`;

exports[`Color Parser HSLA clamps lightness between 0% and 100% 1`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 100%, -.1%, 100%)",
}
`;

exports[`Color Parser HSLA clamps lightness between 0% and 100% 2`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 100%, 100.1%, 100%)",
}
`;

exports[`Color Parser HSLA clamps saturation between 0% and 100% 1`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, -.1%, 100%, 100%)",
}
`;

exports[`Color Parser HSLA clamps saturation between 0% and 100% 2`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 100.1%, 100%, 100%)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 1`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "hue": 0,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsl(0, 0%, 100%)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 2`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsl(90, 0%, 100%)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 3`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "hue": 0,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(0, 0%, 100%)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 4`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 0%, 100%)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 5`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "hue": 0,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(0, 0%, 100%, 1)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 6`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 0%, 100%, 1)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 7`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "hue": 0,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(0, 0%, 100%, 100%)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 8`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 0%, 100%, 100%)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 9`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 0.5,
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 0%, 100%, 0.5)",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 10`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 50,
        "stringify": [Function],
      },
    },
    "hue": 90,
    "lightness": Object {
      "percentage": 100,
      "stringify": [Function],
    },
    "saturation": Object {
      "percentage": 0,
      "stringify": [Function],
    },
    "tag": "hsla",
  },
  "token": "hsla(90, 0%, 100%, 50%)",
}
`;

exports[`Color Parser HSLA produces parse errors for missing hue, saturation & ligthness values 1`] = `
Object {
  "message": "hsla() seems to be a malformed hsla() value",
  "token": "hsla()",
}
`;

exports[`Color Parser HSLA produces parse errors when alpha is neither a number nor percentage 1`] = `
Object {
  "message": "The alpha value(fourth argument) in hsla() should be either a  number or a percentage",
  "token": "hsla(90, 0%, 100%, hex)",
}
`;

exports[`Color Parser HSLA produces parse errors when hue value is not a number 1`] = `
Object {
  "message": "In hsla() the hue (first argument) should be a number",
  "token": "hsla(0%, 0%, 100%, 100%)",
}
`;

exports[`Color Parser HSLA produces parse errors when lightness is not a percentage 1`] = `
Object {
  "message": "In hsla() the ligthness (third argument) should always be a percentage",
  "token": "hsla(90, 0%, 100, 100%)",
}
`;

exports[`Color Parser HSLA produces parse errors when saturation is not a percentage 1`] = `
Object {
  "message": "In hsla() the saturation (second argument) should always be a percentage",
  "token": "hsla(90, 0, 100%, 100%)",
}
`;

exports[`Color Parser Hex colors parses hex values corresponding to every named color keyword 1`] = `
"{\\"token\\":\\"#F0F8FF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F0F8FF\\"}}
{\\"token\\":\\"#FAEBD7\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FAEBD7\\"}}
{\\"token\\":\\"#00FFFF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FFFF\\"}}
{\\"token\\":\\"#7FFFD4\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#7FFFD4\\"}}
{\\"token\\":\\"#F0FFFF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F0FFFF\\"}}
{\\"token\\":\\"#F5F5DC\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F5F5DC\\"}}
{\\"token\\":\\"#FFE4C4\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFE4C4\\"}}
{\\"token\\":\\"#000000\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#000000\\"}}
{\\"token\\":\\"#FFEBCD\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFEBCD\\"}}
{\\"token\\":\\"#0000FF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#0000FF\\"}}
{\\"token\\":\\"#8A2BE2\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8A2BE2\\"}}
{\\"token\\":\\"#A52A2A\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#A52A2A\\"}}
{\\"token\\":\\"#DEB887\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DEB887\\"}}
{\\"token\\":\\"#5F9EA0\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#5F9EA0\\"}}
{\\"token\\":\\"#7FFF00\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#7FFF00\\"}}
{\\"token\\":\\"#D2691E\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D2691E\\"}}
{\\"token\\":\\"#FF7F50\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF7F50\\"}}
{\\"token\\":\\"#6495ED\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#6495ED\\"}}
{\\"token\\":\\"#FFF8DC\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFF8DC\\"}}
{\\"token\\":\\"#DC143C\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DC143C\\"}}
{\\"token\\":\\"#00FFFF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FFFF\\"}}
{\\"token\\":\\"#00008B\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00008B\\"}}
{\\"token\\":\\"#008B8B\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#008B8B\\"}}
{\\"token\\":\\"#B8860B\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#B8860B\\"}}
{\\"token\\":\\"#A9A9A9\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#A9A9A9\\"}}
{\\"token\\":\\"#006400\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#006400\\"}}
{\\"token\\":\\"#A9A9A9\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#A9A9A9\\"}}
{\\"token\\":\\"#BDB76B\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#BDB76B\\"}}
{\\"token\\":\\"#8B008B\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8B008B\\"}}
{\\"token\\":\\"#556B2F\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#556B2F\\"}}
{\\"token\\":\\"#FF8C00\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF8C00\\"}}
{\\"token\\":\\"#9932CC\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#9932CC\\"}}
{\\"token\\":\\"#8B0000\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8B0000\\"}}
{\\"token\\":\\"#E9967A\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#E9967A\\"}}
{\\"token\\":\\"#8FBC8F\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8FBC8F\\"}}
{\\"token\\":\\"#483D8B\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#483D8B\\"}}
{\\"token\\":\\"#2F4F4F\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#2F4F4F\\"}}
{\\"token\\":\\"#2F4F4F\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#2F4F4F\\"}}
{\\"token\\":\\"#00CED1\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00CED1\\"}}
{\\"token\\":\\"#9400D3\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#9400D3\\"}}
{\\"token\\":\\"#FF1493\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF1493\\"}}
{\\"token\\":\\"#00BFFF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00BFFF\\"}}
{\\"token\\":\\"#696969\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#696969\\"}}
{\\"token\\":\\"#696969\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#696969\\"}}
{\\"token\\":\\"#1E90FF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#1E90FF\\"}}
{\\"token\\":\\"#B22222\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#B22222\\"}}
{\\"token\\":\\"#FFFAF0\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFAF0\\"}}
{\\"token\\":\\"#228B22\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#228B22\\"}}
{\\"token\\":\\"#FF00FF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF00FF\\"}}
{\\"token\\":\\"#DCDCDC\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DCDCDC\\"}}
{\\"token\\":\\"#F8F8FF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F8F8FF\\"}}
{\\"token\\":\\"#FFD700\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFD700\\"}}
{\\"token\\":\\"#DAA520\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DAA520\\"}}
{\\"token\\":\\"#808080\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#808080\\"}}
{\\"token\\":\\"#008000\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#008000\\"}}
{\\"token\\":\\"#ADFF2F\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#ADFF2F\\"}}
{\\"token\\":\\"#808080\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#808080\\"}}
{\\"token\\":\\"#F0FFF0\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F0FFF0\\"}}
{\\"token\\":\\"#FF69B4\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF69B4\\"}}
{\\"token\\":\\"#CD5C5C\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#CD5C5C\\"}}
{\\"token\\":\\"#4B0082\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#4B0082\\"}}
{\\"token\\":\\"#FFFFF0\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFFF0\\"}}
{\\"token\\":\\"#F0E68C\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F0E68C\\"}}
{\\"token\\":\\"#E6E6FA\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#E6E6FA\\"}}
{\\"token\\":\\"#FFF0F5\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFF0F5\\"}}
{\\"token\\":\\"#7CFC00\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#7CFC00\\"}}
{\\"token\\":\\"#FFFACD\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFACD\\"}}
{\\"token\\":\\"#ADD8E6\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#ADD8E6\\"}}
{\\"token\\":\\"#F08080\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F08080\\"}}
{\\"token\\":\\"#E0FFFF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#E0FFFF\\"}}
{\\"token\\":\\"#FAFAD2\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FAFAD2\\"}}
{\\"token\\":\\"#D3D3D3\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D3D3D3\\"}}
{\\"token\\":\\"#90EE90\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#90EE90\\"}}
{\\"token\\":\\"#D3D3D3\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D3D3D3\\"}}
{\\"token\\":\\"#FFB6C1\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFB6C1\\"}}
{\\"token\\":\\"#FFA07A\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFA07A\\"}}
{\\"token\\":\\"#20B2AA\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#20B2AA\\"}}
{\\"token\\":\\"#87CEFA\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#87CEFA\\"}}
{\\"token\\":\\"#778899\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#778899\\"}}
{\\"token\\":\\"#778899\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#778899\\"}}
{\\"token\\":\\"#B0C4DE\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#B0C4DE\\"}}
{\\"token\\":\\"#FFFFE0\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFFE0\\"}}
{\\"token\\":\\"#00FF00\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FF00\\"}}
{\\"token\\":\\"#32CD32\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#32CD32\\"}}
{\\"token\\":\\"#FAF0E6\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FAF0E6\\"}}
{\\"token\\":\\"#FF00FF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF00FF\\"}}
{\\"token\\":\\"#800000\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#800000\\"}}
{\\"token\\":\\"#66CDAA\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#66CDAA\\"}}
{\\"token\\":\\"#0000CD\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#0000CD\\"}}
{\\"token\\":\\"#BA55D3\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#BA55D3\\"}}
{\\"token\\":\\"#9370DB\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#9370DB\\"}}
{\\"token\\":\\"#3CB371\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#3CB371\\"}}
{\\"token\\":\\"#7B68EE\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#7B68EE\\"}}
{\\"token\\":\\"#00FA9A\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FA9A\\"}}
{\\"token\\":\\"#48D1CC\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#48D1CC\\"}}
{\\"token\\":\\"#C71585\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#C71585\\"}}
{\\"token\\":\\"#191970\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#191970\\"}}
{\\"token\\":\\"#F5FFFA\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F5FFFA\\"}}
{\\"token\\":\\"#FFE4E1\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFE4E1\\"}}
{\\"token\\":\\"#FFE4B5\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFE4B5\\"}}
{\\"token\\":\\"#FFDEAD\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFDEAD\\"}}
{\\"token\\":\\"#000080\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#000080\\"}}
{\\"token\\":\\"#FDF5E6\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FDF5E6\\"}}
{\\"token\\":\\"#808000\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#808000\\"}}
{\\"token\\":\\"#6B8E23\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#6B8E23\\"}}
{\\"token\\":\\"#FFA500\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFA500\\"}}
{\\"token\\":\\"#FF4500\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF4500\\"}}
{\\"token\\":\\"#DA70D6\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DA70D6\\"}}
{\\"token\\":\\"#EEE8AA\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#EEE8AA\\"}}
{\\"token\\":\\"#98FB98\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#98FB98\\"}}
{\\"token\\":\\"#AFEEEE\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#AFEEEE\\"}}
{\\"token\\":\\"#DB7093\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DB7093\\"}}
{\\"token\\":\\"#FFEFD5\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFEFD5\\"}}
{\\"token\\":\\"#FFDAB9\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFDAB9\\"}}
{\\"token\\":\\"#CD853F\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#CD853F\\"}}
{\\"token\\":\\"#FFC0CB\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFC0CB\\"}}
{\\"token\\":\\"#DDA0DD\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DDA0DD\\"}}
{\\"token\\":\\"#B0E0E6\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#B0E0E6\\"}}
{\\"token\\":\\"#800080\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#800080\\"}}
{\\"token\\":\\"#663399\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#663399\\"}}
{\\"token\\":\\"#FF0000\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF0000\\"}}
{\\"token\\":\\"#BC8F8F\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#BC8F8F\\"}}
{\\"token\\":\\"#4169E1\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#4169E1\\"}}
{\\"token\\":\\"#8B4513\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8B4513\\"}}
{\\"token\\":\\"#FA8072\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FA8072\\"}}
{\\"token\\":\\"#F4A460\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F4A460\\"}}
{\\"token\\":\\"#2E8B57\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#2E8B57\\"}}
{\\"token\\":\\"#FFF5EE\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFF5EE\\"}}
{\\"token\\":\\"#A0522D\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#A0522D\\"}}
{\\"token\\":\\"#C0C0C0\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#C0C0C0\\"}}
{\\"token\\":\\"#87CEEB\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#87CEEB\\"}}
{\\"token\\":\\"#6A5ACD\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#6A5ACD\\"}}
{\\"token\\":\\"#708090\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#708090\\"}}
{\\"token\\":\\"#708090\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#708090\\"}}
{\\"token\\":\\"#FFFAFA\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFAFA\\"}}
{\\"token\\":\\"#00FF7F\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FF7F\\"}}
{\\"token\\":\\"#4682B4\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#4682B4\\"}}
{\\"token\\":\\"#D2B48C\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D2B48C\\"}}
{\\"token\\":\\"#008080\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#008080\\"}}
{\\"token\\":\\"#D8BFD8\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D8BFD8\\"}}
{\\"token\\":\\"#FF6347\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF6347\\"}}
{\\"token\\":\\"#40E0D0\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#40E0D0\\"}}
{\\"token\\":\\"#EE82EE\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#EE82EE\\"}}
{\\"token\\":\\"#F5DEB3\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F5DEB3\\"}}
{\\"token\\":\\"#FFFFFF\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFFFF\\"}}
{\\"token\\":\\"#F5F5F5\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F5F5F5\\"}}
{\\"token\\":\\"#FFFF00\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFF00\\"}}
{\\"token\\":\\"#9ACD32\\",\\"parsed\\":{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#9ACD32\\"}}"
`;

exports[`Color Parser Hex colors parses hex values of size 8, 6, 4 & 3 1`] = `
Object {
  "parsed": Object {
    "hex": "#4682B4FF",
    "tag": "hex-color",
  },
  "token": "#4682B4FF",
}
`;

exports[`Color Parser Hex colors parses hex values of size 8, 6, 4 & 3 2`] = `
Object {
  "parsed": Object {
    "hex": "#4682B4",
    "tag": "hex-color",
  },
  "token": "#4682B4",
}
`;

exports[`Color Parser Hex colors parses hex values of size 8, 6, 4 & 3 3`] = `
Object {
  "parsed": Object {
    "hex": "#4682",
    "tag": "hex-color",
  },
  "token": "#4682",
}
`;

exports[`Color Parser Hex colors parses hex values of size 8, 6, 4 & 3 4`] = `
Object {
  "parsed": Object {
    "hex": "#468",
    "tag": "hex-color",
  },
  "token": "#468",
}
`;

exports[`Color Parser Hex colors produces a parse error for invalid hex values 1`] = `
Object {
  "message": "#46:  is not a supported color format.
The supported formats are: hex, named  color keywords, rgb(), rgba(), hsl() and hsla().",
  "token": "#46",
}
`;

exports[`Color Parser Hex colors produces a parse error for invalid hex values 2`] = `
Object {
  "message": "#4682B4FF00:  is not a supported color format.
The supported formats are: hex, named  color keywords, rgb(), rgba(), hsl() and hsla().",
  "token": "#4682B4FF00",
}
`;

exports[`Color Parser Hex colors produces a parse error for invalid hex values 3`] = `
Object {
  "message": "#xyz:  is not a supported color format.
The supported formats are: hex, named  color keywords, rgb(), rgba(), hsl() and hsla().",
  "token": "#xyz",
}
`;

exports[`Color Parser Named color keywords parses every named color keyword 1`] = `
"{\\"token\\":\\"aliceblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"aliceblue\\"}}
{\\"token\\":\\"antiquewhite\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"antiquewhite\\"}}
{\\"token\\":\\"aqua\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"aqua\\"}}
{\\"token\\":\\"aquamarine\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"aquamarine\\"}}
{\\"token\\":\\"azure\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"azure\\"}}
{\\"token\\":\\"beige\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"beige\\"}}
{\\"token\\":\\"bisque\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"bisque\\"}}
{\\"token\\":\\"black\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"black\\"}}
{\\"token\\":\\"blanchedalmond\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"blanchedalmond\\"}}
{\\"token\\":\\"blue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"blue\\"}}
{\\"token\\":\\"blueviolet\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"blueviolet\\"}}
{\\"token\\":\\"brown\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"brown\\"}}
{\\"token\\":\\"burlywood\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"burlywood\\"}}
{\\"token\\":\\"cadetblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"cadetblue\\"}}
{\\"token\\":\\"chartreuse\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"chartreuse\\"}}
{\\"token\\":\\"chocolate\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"chocolate\\"}}
{\\"token\\":\\"coral\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"coral\\"}}
{\\"token\\":\\"cornflowerblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"cornflowerblue\\"}}
{\\"token\\":\\"cornsilk\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"cornsilk\\"}}
{\\"token\\":\\"crimson\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"crimson\\"}}
{\\"token\\":\\"cyan\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"cyan\\"}}
{\\"token\\":\\"darkblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkblue\\"}}
{\\"token\\":\\"darkcyan\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkcyan\\"}}
{\\"token\\":\\"darkgoldenrod\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkgoldenrod\\"}}
{\\"token\\":\\"darkgray\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkgray\\"}}
{\\"token\\":\\"darkgreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkgreen\\"}}
{\\"token\\":\\"darkgrey\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkgrey\\"}}
{\\"token\\":\\"darkkhaki\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkkhaki\\"}}
{\\"token\\":\\"darkmagenta\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkmagenta\\"}}
{\\"token\\":\\"darkolivegreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkolivegreen\\"}}
{\\"token\\":\\"darkorange\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkorange\\"}}
{\\"token\\":\\"darkorchid\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkorchid\\"}}
{\\"token\\":\\"darkred\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkred\\"}}
{\\"token\\":\\"darksalmon\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darksalmon\\"}}
{\\"token\\":\\"darkseagreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkseagreen\\"}}
{\\"token\\":\\"darkslateblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkslateblue\\"}}
{\\"token\\":\\"darkslategray\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkslategray\\"}}
{\\"token\\":\\"darkslategrey\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkslategrey\\"}}
{\\"token\\":\\"darkturquoise\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkturquoise\\"}}
{\\"token\\":\\"darkviolet\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"darkviolet\\"}}
{\\"token\\":\\"deeppink\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"deeppink\\"}}
{\\"token\\":\\"deepskyblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"deepskyblue\\"}}
{\\"token\\":\\"dimgray\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"dimgray\\"}}
{\\"token\\":\\"dimgrey\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"dimgrey\\"}}
{\\"token\\":\\"dodgerblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"dodgerblue\\"}}
{\\"token\\":\\"firebrick\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"firebrick\\"}}
{\\"token\\":\\"floralwhite\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"floralwhite\\"}}
{\\"token\\":\\"forestgreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"forestgreen\\"}}
{\\"token\\":\\"fuchsia\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"fuchsia\\"}}
{\\"token\\":\\"gainsboro\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"gainsboro\\"}}
{\\"token\\":\\"ghostwhite\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"ghostwhite\\"}}
{\\"token\\":\\"gold\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"gold\\"}}
{\\"token\\":\\"goldenrod\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"goldenrod\\"}}
{\\"token\\":\\"gray\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"gray\\"}}
{\\"token\\":\\"green\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"green\\"}}
{\\"token\\":\\"greenyellow\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"greenyellow\\"}}
{\\"token\\":\\"grey\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"grey\\"}}
{\\"token\\":\\"honeydew\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"honeydew\\"}}
{\\"token\\":\\"hotpink\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"hotpink\\"}}
{\\"token\\":\\"indianred\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"indianred\\"}}
{\\"token\\":\\"indigo\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"indigo\\"}}
{\\"token\\":\\"ivory\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"ivory\\"}}
{\\"token\\":\\"khaki\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"khaki\\"}}
{\\"token\\":\\"lavender\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lavender\\"}}
{\\"token\\":\\"lavenderblush\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lavenderblush\\"}}
{\\"token\\":\\"lawngreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lawngreen\\"}}
{\\"token\\":\\"lemonchiffon\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lemonchiffon\\"}}
{\\"token\\":\\"lightblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightblue\\"}}
{\\"token\\":\\"lightcoral\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightcoral\\"}}
{\\"token\\":\\"lightcyan\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightcyan\\"}}
{\\"token\\":\\"lightgoldenrodyellow\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightgoldenrodyellow\\"}}
{\\"token\\":\\"lightgray\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightgray\\"}}
{\\"token\\":\\"lightgreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightgreen\\"}}
{\\"token\\":\\"lightgrey\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightgrey\\"}}
{\\"token\\":\\"lightpink\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightpink\\"}}
{\\"token\\":\\"lightsalmon\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightsalmon\\"}}
{\\"token\\":\\"lightseagreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightseagreen\\"}}
{\\"token\\":\\"lightskyblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightskyblue\\"}}
{\\"token\\":\\"lightslategray\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightslategray\\"}}
{\\"token\\":\\"lightslategrey\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightslategrey\\"}}
{\\"token\\":\\"lightsteelblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightsteelblue\\"}}
{\\"token\\":\\"lightyellow\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lightyellow\\"}}
{\\"token\\":\\"lime\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"lime\\"}}
{\\"token\\":\\"limegreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"limegreen\\"}}
{\\"token\\":\\"linen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"linen\\"}}
{\\"token\\":\\"magenta\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"magenta\\"}}
{\\"token\\":\\"maroon\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"maroon\\"}}
{\\"token\\":\\"mediumaquamarine\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mediumaquamarine\\"}}
{\\"token\\":\\"mediumblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mediumblue\\"}}
{\\"token\\":\\"mediumorchid\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mediumorchid\\"}}
{\\"token\\":\\"mediumpurple\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mediumpurple\\"}}
{\\"token\\":\\"mediumseagreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mediumseagreen\\"}}
{\\"token\\":\\"mediumslateblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mediumslateblue\\"}}
{\\"token\\":\\"mediumspringgreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mediumspringgreen\\"}}
{\\"token\\":\\"mediumturquoise\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mediumturquoise\\"}}
{\\"token\\":\\"mediumvioletred\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mediumvioletred\\"}}
{\\"token\\":\\"midnightblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"midnightblue\\"}}
{\\"token\\":\\"mintcream\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mintcream\\"}}
{\\"token\\":\\"mistyrose\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"mistyrose\\"}}
{\\"token\\":\\"moccasin\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"moccasin\\"}}
{\\"token\\":\\"navajowhite\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"navajowhite\\"}}
{\\"token\\":\\"navy\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"navy\\"}}
{\\"token\\":\\"oldlace\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"oldlace\\"}}
{\\"token\\":\\"olive\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"olive\\"}}
{\\"token\\":\\"olivedrab\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"olivedrab\\"}}
{\\"token\\":\\"orange\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"orange\\"}}
{\\"token\\":\\"orangered\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"orangered\\"}}
{\\"token\\":\\"orchid\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"orchid\\"}}
{\\"token\\":\\"palegoldenrod\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"palegoldenrod\\"}}
{\\"token\\":\\"palegreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"palegreen\\"}}
{\\"token\\":\\"paleturquoise\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"paleturquoise\\"}}
{\\"token\\":\\"palevioletred\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"palevioletred\\"}}
{\\"token\\":\\"papayawhip\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"papayawhip\\"}}
{\\"token\\":\\"peachpuff\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"peachpuff\\"}}
{\\"token\\":\\"peru\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"peru\\"}}
{\\"token\\":\\"pink\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"pink\\"}}
{\\"token\\":\\"plum\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"plum\\"}}
{\\"token\\":\\"powderblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"powderblue\\"}}
{\\"token\\":\\"purple\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"purple\\"}}
{\\"token\\":\\"rebeccapurple\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"rebeccapurple\\"}}
{\\"token\\":\\"red\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"red\\"}}
{\\"token\\":\\"rosybrown\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"rosybrown\\"}}
{\\"token\\":\\"royalblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"royalblue\\"}}
{\\"token\\":\\"saddlebrown\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"saddlebrown\\"}}
{\\"token\\":\\"salmon\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"salmon\\"}}
{\\"token\\":\\"sandybrown\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"sandybrown\\"}}
{\\"token\\":\\"seagreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"seagreen\\"}}
{\\"token\\":\\"seashell\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"seashell\\"}}
{\\"token\\":\\"sienna\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"sienna\\"}}
{\\"token\\":\\"silver\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"silver\\"}}
{\\"token\\":\\"skyblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"skyblue\\"}}
{\\"token\\":\\"slateblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"slateblue\\"}}
{\\"token\\":\\"slategray\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"slategray\\"}}
{\\"token\\":\\"slategrey\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"slategrey\\"}}
{\\"token\\":\\"snow\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"snow\\"}}
{\\"token\\":\\"springgreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"springgreen\\"}}
{\\"token\\":\\"steelblue\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"steelblue\\"}}
{\\"token\\":\\"tan\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"tan\\"}}
{\\"token\\":\\"teal\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"teal\\"}}
{\\"token\\":\\"thistle\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"thistle\\"}}
{\\"token\\":\\"tomato\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"tomato\\"}}
{\\"token\\":\\"turquoise\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"turquoise\\"}}
{\\"token\\":\\"violet\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"violet\\"}}
{\\"token\\":\\"wheat\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"wheat\\"}}
{\\"token\\":\\"white\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"white\\"}}
{\\"token\\":\\"whitesmoke\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"whitesmoke\\"}}
{\\"token\\":\\"yellow\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"yellow\\"}}
{\\"token\\":\\"yellowgreen\\",\\"parsed\\":{\\"tag\\":\\"keyword-color\\",\\"keyword\\":\\"yellowgreen\\"}}"
`;

exports[`Color Parser Named color keywords produces a parse error for non-existent color keywords 1`] = `
Object {
  "message": "notarealcolorkeyword:  is not a supported color format.
The supported formats are: hex, named  color keywords, rgb(), rgba(), hsl() and hsla().",
  "token": "notarealcolorkeyword",
}
`;

exports[`Color Parser RGBA parsed rgba channel values are clamped between 0 and 255 1`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      0,
      0,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgb(-.1, -.1, -.1)",
}
`;

exports[`Color Parser RGBA parsed rgba channel values are clamped between 0 and 255 2`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      255,
      255,
      255,
    ],
    "tag": "rgba",
  },
  "token": "rgb(255.01, 255.01, 255.01)",
}
`;

exports[`Color Parser RGBA parsed rgba channel values are clamped between 0 and 255 3`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
    ],
    "tag": "rgba",
  },
  "token": "rgb(-.1%, -.1%, -.1%)",
}
`;

exports[`Color Parser RGBA parsed rgba channel values are clamped between 0 and 255 4`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      Object {
        "percentage": 100,
        "stringify": [Function],
      },
      Object {
        "percentage": 100,
        "stringify": [Function],
      },
      Object {
        "percentage": 100,
        "stringify": [Function],
      },
    ],
    "tag": "rgba",
  },
  "token": "rgb(100.1%, 100.1%, 100.1%)",
}
`;

exports[`Color Parser RGBA parses rgba alpha values are clamped between 0 and 1 1`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 0,
    },
    "channels": Array [
      0,
      0,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgba(0, 0, 0, -.1)",
}
`;

exports[`Color Parser RGBA parses rgba alpha values are clamped between 0 and 1 2`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      0,
      0,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgba(0, 0, 0, 1.01)",
}
`;

exports[`Color Parser RGBA parses rgba alpha values are clamped between 0 and 1 3`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 0,
        "stringify": [Function],
      },
    },
    "channels": Array [
      0,
      0,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgba(0, 0, 0, -0.1%)",
}
`;

exports[`Color Parser RGBA parses rgba alpha values are clamped between 0 and 1 4`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "channels": Array [
      0,
      0,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgba(0, 0, 0, 100.01%)",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 1`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      0,
      255,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgba(0, 255, 0, 1)",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 2`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "channels": Array [
      0,
      255,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgba(0, 255, 0, 100%)",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 3`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
      Object {
        "percentage": 100,
        "stringify": [Function],
      },
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
    ],
    "tag": "rgba",
  },
  "token": "rgba(0%, 100%, 0%, 1)",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 4`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 100,
        "stringify": [Function],
      },
    },
    "channels": Array [
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
      Object {
        "percentage": 100,
        "stringify": [Function],
      },
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
    ],
    "tag": "rgba",
  },
  "token": "rgba(0%, 100%, 0%, 100%)",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 5`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": Object {
        "percentage": 50,
        "stringify": [Function],
      },
    },
    "channels": Array [
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
      Object {
        "percentage": 100,
        "stringify": [Function],
      },
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
    ],
    "tag": "rgba",
  },
  "token": "rgb(0%, 100%, 0%, 50%)",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 6`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 0.5,
    },
    "channels": Array [
      0,
      255,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgba(0, 255, 0, 0.5)",
}
`;

exports[`Color Parser RGBA parses rgba values without an alpha value 1`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      0,
      255,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgb(0, 255, 0)",
}
`;

exports[`Color Parser RGBA parses rgba values without an alpha value 2`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      0,
      255,
      0,
    ],
    "tag": "rgba",
  },
  "token": "rgba(0, 255, 0)",
}
`;

exports[`Color Parser RGBA parses rgba values without an alpha value 3`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
      Object {
        "percentage": 100,
        "stringify": [Function],
      },
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
    ],
    "tag": "rgba",
  },
  "token": "rgb(0%, 100%, 0%)",
}
`;

exports[`Color Parser RGBA parses rgba values without an alpha value 4`] = `
Object {
  "parsed": Object {
    "alpha": Object {
      "alpha": 1,
    },
    "channels": Array [
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
      Object {
        "percentage": 100,
        "stringify": [Function],
      },
      Object {
        "percentage": 0,
        "stringify": [Function],
      },
    ],
    "tag": "rgba",
  },
  "token": "rgba(0%, 100%, 0%)",
}
`;

exports[`Color Parser RGBA produces parse errors for missing rgba channel values 1`] = `
Object {
  "message": "rgba() seems to be a malformed rgba() value",
  "token": "rgba()",
}
`;

exports[`Color Parser RGBA produces parse errors for rgba with incorrect number of arguments 1`] = `
Object {
  "message": "rgba(0%, 100, 0%, 100%, 1) seems to be an rgba() value. It should have exactly three arguments to specify the red, green & blue channels of the color respectively. A final optional argument specifies the alpha of the color.",
  "token": "rgba(0%, 100, 0%, 100%, 1)",
}
`;

exports[`Color Parser RGBA produces parse errors for rgba with incorrect number of arguments 2`] = `
Object {
  "message": "rgba(100%, 1) seems to be an rgba() value. It should have exactly three arguments to specify the red, green & blue channels of the color respectively. A final optional argument specifies the alpha of the color.",
  "token": "rgba(100%, 1)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba alpha value 1`] = `
Object {
  "message": "The alpha value(fourth argument) in rgba() should be either a  number or a percentage",
  "token": "rgba(0%, 100%, 0%, abc)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba alpha value 2`] = `
Object {
  "message": "The alpha value(fourth argument) in rgba() should be either a  number or a percentage",
  "token": "rgba(0%, 100%, 0%, abc)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 1`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0, 255%, 0)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 2`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0%, 100, 0%)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 3`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0, 255%, 0, 100%)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 4`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0%, 100, 0%, 100%)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 5`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0, 255%, 0, abc)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 6`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0%, 100, 0%, abc)",
}
`;
